# tender_facility

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: 1.py  app_factory.py  auth.py  database.py  dependencies.py  endpoints.py  main.py  models.py  schemas.py  session.py  settings.py
tests/: conftest.py  test_bids.py  test_ping.py  test_reviews.py  test_tenders.py  utils.py
задание/: README.md
